# freebie-emailer

./: .gitignore  Cargo.toml  Dockerfile  README.md
app/src/: main.rs
src/: main.rs
